--- a/.github/workflows/shopify-theme-deploy.yml
+++ b/.github/workflows/shopify-theme-deploy.yml
@@ -55,25 +55,37 @@ jobs:
       - name: Install Shopify CLI
         run: npm install --global @shopify/cli@latest @shopify/theme@latest
 
+      - name: Normalize store domain
+        run: |
+          normalized="${SHOPIFY_FLAG_STORE#https://}"
+          normalized="${normalized#http://}"
+          normalized="${normalized%%/*}"
+          echo "SHOPIFY_FLAG_STORE=$normalized" >> "$GITHUB_ENV"
+
       - name: Validate required secrets
         run: |
           test -n "$SHOPIFY_CLI_THEME_TOKEN" || (echo "Missing SHOPIFY_CLI_THEME_TOKEN" && exit 1)
           test -n "$SHOPIFY_FLAG_STORE" || (echo "Missing SHOPIFY_STORE" && exit 1)
           test -n "$STAGING_THEME_ID" || (echo "Missing SHOPIFY_THEME_ID_STAGING" && exit 1)
-          if [[ "$SHOPIFY_FLAG_STORE" == http* ]]; then
-            echo "SHOPIFY_STORE must be domain only, e.g. tu-tienda.myshopify.com (without https://)"
-            exit 1
-          fi
           if ! [[ "$STAGING_THEME_ID" =~ ^[0-9]+$ ]]; then
             echo "SHOPIFY_THEME_ID_STAGING must be numeric"
             exit 1
           fi
 
-      - name: Verify Shopify access
-        run: shopify theme list --store "$SHOPIFY_FLAG_STORE"
+      - name: Verify staging is not live theme
+        run: |
+          LIVE_THEME_ID="$(shopify theme list --store "$SHOPIFY_FLAG_STORE" --json | jq -r '.[] | select((.role // "" | ascii_downcase) == "main") | .id' | head -n1)"
+          if [ -z "$LIVE_THEME_ID" ]; then
+            echo "Could not detect live theme id from store $SHOPIFY_FLAG_STORE"
+            exit 1
+          fi
+          if [ "$LIVE_THEME_ID" = "$STAGING_THEME_ID" ]; then
+            echo "SHOPIFY_THEME_ID_STAGING is pointing to live theme ($LIVE_THEME_ID). Use a draft theme id."
+            exit 1
+          fi
 
       - name: Push theme to staging
-        run: shopify theme push --path . --store "$SHOPIFY_FLAG_STORE" --theme "$STAGING_THEME_ID" --nodelete --verbose
+        run: shopify theme push --path . --store "$SHOPIFY_FLAG_STORE" --theme "$STAGING_THEME_ID" --nodelete
 
   deploy-production:
     name: Deploy Production Theme
@@ -98,22 +110,35 @@ jobs:
       - name: Install Shopify CLI
         run: npm install --global @shopify/cli@latest @shopify/theme@latest
 
+      - name: Normalize store domain
+        run: |
+          normalized="${SHOPIFY_FLAG_STORE#https://}"
+          normalized="${normalized#http://}"
+          normalized="${normalized%%/*}"
+          echo "SHOPIFY_FLAG_STORE=$normalized" >> "$GITHUB_ENV"
+
       - name: Validate required secrets
         run: |
           test -n "$SHOPIFY_CLI_THEME_TOKEN" || (echo "Missing SHOPIFY_CLI_THEME_TOKEN" && exit 1)
           test -n "$SHOPIFY_FLAG_STORE" || (echo "Missing SHOPIFY_STORE" && exit 1)
           test -n "$PRODUCTION_THEME_ID" || (echo "Missing SHOPIFY_THEME_ID_PRODUCTION" && exit 1)
-          if [[ "$SHOPIFY_FLAG_STORE" == http* ]]; then
-            echo "SHOPIFY_STORE must be domain only, e.g. tu-tienda.myshopify.com (without https://)"
-            exit 1
-          fi
           if ! [[ "$PRODUCTION_THEME_ID" =~ ^[0-9]+$ ]]; then
             echo "SHOPIFY_THEME_ID_PRODUCTION must be numeric"
             exit 1
           fi
 
-      - name: Verify Shopify access
-        run: shopify theme list --store "$SHOPIFY_FLAG_STORE"
+      - name: Verify production id matches live theme
+        run: |
+          LIVE_THEME_ID="$(shopify theme list --store "$SHOPIFY_FLAG_STORE" --json | jq -r '.[] | select((.role // "" | ascii_downcase) == "main") | .id' | head -n1)"
+          if [ -z "$LIVE_THEME_ID" ]; then
+            echo "Could not detect live theme id from store $SHOPIFY_FLAG_STORE"
+            exit 1
+          fi
+          if [ "$LIVE_THEME_ID" != "$PRODUCTION_THEME_ID" ]; then
+            echo "SHOPIFY_THEME_ID_PRODUCTION ($PRODUCTION_THEME_ID) does not match live theme id ($LIVE_THEME_ID)."
+            echo "Update GitHub secret SHOPIFY_THEME_ID_PRODUCTION to $LIVE_THEME_ID."
+            exit 1
+          fi
 
       - name: Push theme to production
-        run: shopify theme push --path . --store "$SHOPIFY_FLAG_STORE" --theme "$PRODUCTION_THEME_ID" --nodelete --allow-live --verbose
+        run: shopify theme push --path . --store "$SHOPIFY_FLAG_STORE" --theme "$PRODUCTION_THEME_ID" --nodelete --allow-live
